--- a/style.css
+++ b/style.css
@@ -1,3 +1,39 @@
 div {
   border: 1px solid black;
 }
+* {
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#buttons {
+  display: grid;
+  grid-template-columns: repeat(4, 10vmin);
+  grid-template-rows: repeat(4, 10vmin);
+  /* gap: 1vmin; */
+  margin-top: -4vmin;
+}
+
+.digits {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#display {
+  margin-bottom: 50px;
+}
+#clear {
+  /* align-items: center; */
+  /* padding: 0 50px; */
+  width: 30%;
+}
