--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   align-items: center;
 }
 
-#buttons {
+#table {
   display: grid;
   grid-template-columns: repeat(4, 10vmin);
   grid-template-rows: repeat(4, 10vmin);
